# QuickBiteQR

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  gunicorn_conf.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
qro_project/: __init__.py  settings.py  urls.py  wsgi.py
restaurant/: admin.py  models.py  payments.py  serializers.py  urls.py  views.py
restaurant/management/commands/: seed_demo.py
restaurant/tests/: test_api.py  test_models.py
templates/: base.html
templates/restaurant/: menu.html
