[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickbiteqr"
version = "0.1.0"
description = "Scan-to-order platform for tables using QR codes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Django>=4.2",
  "djangorestframework",
  "Pillow",
  "qrcode",
  "psycopg2-binary",
  "python-dotenv",
  "dj-database-url",
  "gunicorn",
]
authors = [
  { name="QuickBiteQR", email="support@example.com" }
]